# overleaf-mcp-server

./: .env.example  LICENSE  README.md  main.py  pyproject.toml
config/: config.py
src/: file_parser.py  latex_client.py  main.py  mcp_server.py  overleaf_client.py
tests/: test_client_integration.py  test_server_mcp.py
