[project]
name = "overleaf-mcp-server"
version = "0.1.0"
description = "Model Context Protocol (MCP) server for interacting with Overleaf projects"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "requests>=2.31.0",
    "pylatexenc>=2.10",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0"
]
requires-python = ">=3.10"

[project.scripts]
overleaf-mcp = "overleaf_mcp_server.main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
