[project]
name = "overleaf-mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gitpython>=3.1.46",
    "mcp>=1.26.0",
    "pydantic>=2.12.5",
    "pylatexenc>=2.10",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
]
